# REFAL

./: .dir-locals.el  .gitignore  AstNode.cpp  AstNode.h  BUGS  CMakeLists.txt  Evaluator.cpp  Evaluator.h  Function.cpp  Function.h  Matcher.cpp  Matcher.h  PPrint.cpp  PPrint.h  Parser.cpp  Parser.h  REFAL.pro  Repl.cpp  Repl.h  StdLib.cpp  StdLib.h  Token.cpp  Token.h  VarContext.cpp  VarContext.h  edit-translations.sh  main.cpp  notes.txt  translations.qrc  update-translations.sh
examples/: Book Examples.refnb
ide/: Cell.cpp  Cell.h  CellModel.cpp  CellModel.h  IDE.pri  IdeMain.cpp  IdeMain.h  NbRuntime.cpp  NbRuntime.h  Notebook.cpp  Notebook.h  RecentModel.cpp  RecentModel.h  resources.qrc
ide/qml/: Cell.qml  Constants.qml  DocumentPadding.qml  InsertRow.qml  NbWindow.qml  NotebookCell.qml  RecentNotebook.qml  Tip.qml  main.qml
ts/: refal_en_US.qm  refal_en_US.ts  refal_ru_RU.qm  refal_ru_RU.ts
